Fix dark mode

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -77,7 +77,7 @@
   body {
     --ion-color-primary: #00ff00;
     --ion-color-primary-rgb: 0,255,0;
-    --ion-color-primary-contrast: #000000;
+    --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 0,0,0;
     --ion-color-primary-shade: #00e000;
     --ion-color-primary-tint: #1aff1a;
